--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -133,7 +133,7 @@
     transform: translate(-50%, -50%);
     width: 60%;
     height: 60%;
-    background: url('/favicon.png') no-repeat center center;
+    background: url('/icon.png') no-repeat center center;
     background-size: contain;
     opacity: 0.1;
     z-index: 1;
